# pipe_agent_ii

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  NOTES_agentic_research.md  README.md  ROADMAP.md  alembic.ini  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  render.yaml
alembic/: env.py
app/: globals.css  layout.tsx  page.tsx
components/: app-shell.tsx
config/: news_prompts.yaml  source_tiers.yaml
lib/: auth.ts  env.ts  paths.ts  server-actions.ts  status.ts
scripts/: __init__.py  apply_phase_a_decisions.py  audit_developer_registry.py  backfill_developers.py  backfill_evidence.py  collapse_duplicate_review_items.py  export_phase_a_reviews.py  phase_a_review_common.py  run_d6_urbanize_smoke.py  run_phase_a_resolve.py  verify_researcher_overrides_migration.py
tests/: conftest.py  test_activity_api.py  test_agent_client.py  test_agent_profiles.py  test_agent_run_schema.py  test_agent_runner.py  test_agent_tools.py  test_api_scaffold.py  test_apply_phase_a_decisions.py  test_backfill_evidence.py  test_collect_source.py  test_contradiction_detection.py  test_costar_ingester.py  test_costar_seed.py  test_coverage_workflows.py  test_d6_urbanize_smoke.py  test_db_connection.py  test_developer_canonicalization.py  test_differ.py  test_evidence_snippets.py  test_geocoding_service.py  test_ladbs_adapter.py  test_ladbs_semantic.py  test_market_config.py  test_matching_candidates.py  test_matching_similarity.py  test_models.py  test_news_ab_harness.py  test_news_agent_smoke.py  test_news_cli.py  test_news_collector.py  (+43 more)
(+302 files in other folders)
